<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">practica2_p4</string>
	<string name="app_name_p">Area computing</string>
	<string name="base">Base:</string>
	<string name="altura">Height:</string>
	<string name="radio">Radio:</string>
	<string name="lado">Side:</string>
	<string name="triangulo">Triangle</string>
	<string name="cuadrado">Square</string>
	<string name="rectangulo">Rectangle</string>
	<string name="circulo">Circle</string>
	<string name="compute">Compute</string>
	<string name="area">Area (u^2):</string>
	<string name="errorF">Error: There are fields missing</string>
</resources>
