<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
	>	
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center_horizontal">
			<TextView
				style="@style/stextView.Titulo"
				android:text="@string/app_name_p"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				style="@style/stextView"
				android:text="@string/base"
				/>
			<EditText
				android:id="@+id/etBase"
				style="@style/stextView.et.fit"
				android:hint="0.0"
				/>
			<TextView
				style="@style/stextView"
				android:text="@string/altura"
				/>
			<EditText
				android:id="@+id/etAltura"
				style="@style/stextView.et.fit"
				android:hint="0.0"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				style="@style/stextView"
				android:text="@string/radio"
				/>
			<EditText
				android:id="@+id/etRadio"
				style="@style/stextView.et.fit"
				android:hint="0.0"/>
			<TextView
				style="@style/stextView"
				android:text="@string/lado"
				/>
			<EditText
				android:id="@+id/etLado"
				style="@style/stextView.et.fit"
				android:hint="0.0"/>
		</LinearLayout>

		<RadioGroup 
			android:id="@+id/rgOps"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		>
			<RadioButton 
				android:id="@+id/rTriangulo"
				style="@style/stextView"
				android:text="@string/triangulo"
				android:checked="true"
			/>
			<RadioButton 
				android:id="@+id/rCuadro"
				style="@style/stextView"
				android:text="@string/cuadrado"
			/>
			<RadioButton 
				android:id="@+id/rRect"
				style="@style/stextView"
				android:text="@string/rectangulo"
			/>
			<RadioButton 
				android:id="@+id/rCirculo"
				style="@style/stextView"
				android:text="@string/circulo"
			/>
		</RadioGroup>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal"
		>
			<Button
				android:id="@+id/bCalcular"
				style="@style/stextView"
				android:text="@string/compute"
			/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal"
		>
			<TextView
				style="@style/stextView"
				android:text="@string/area"
			/>
			<EditText
				android:id="@+id/etArea"
				style="@style/stextView.et.fit"
				android:hint="0.0"
				android:enabled="false"
			/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
